fixed scrollbar

--- a/src/css/sass/_figure.scss
+++ b/src/css/sass/_figure.scss
@@ -80,8 +80,8 @@
 
 .screenshots {
     font-size: 0;
-    margin: 20px 0 16px;
-    padding: 4px 4px 10px;
+    margin: 20px 0;
+    padding: 4px 4px 12px;
     white-space: nowrap;
     overflow: auto;
 
