--- a/src/css/sass/_layout.scss
+++ b/src/css/sass/_layout.scss
@@ -28,8 +28,8 @@ footer {
 /*----------  Scrollbar  ----------*/
 
 ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
